2007-05-08  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin_manager.py: Added context menus to 
	plugin tabs (bug 427059).
	
	* ChangeLog:
	* NOTICE:
	* help/C/accerciser.xml:
	* help/en_GB/en_GB.po:
	* help/es/es.po:
	* help/sv/sv.po:
	* plugins/api_view.py:
	* plugins/console.py:
	* plugins/event_monitor.py:
	* plugins/interface_view.glade:
	* plugins/interface_view.py:
	* plugins/script_recorder.py:
	* src/lib/accerciser/Makefile.am:
	* src/lib/accerciser/__init__.py:
	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/accessible_treeview.py:
	* src/lib/accerciser/hotkey_manager.py:
	* src/lib/accerciser/icons.py:
	* src/lib/accerciser/node.py:
	* src/lib/accerciser/plugin.py:
	* src/lib/accerciser/pyLinAcc.zip:
	* src/lib/accerciser/pyatspi.zip:
	* src/lib/accerciser/script_playback.py:
	* src/lib/accerciser/tools.py: Merged pyatspi branch in to trunk.

2007-05-07  Eitan Isaacson  <eitan@ascender.com>

	* NOTICE: Replaced pyLinAcc copyright notice with pyatspi one.
	* help/C/accerciser.xml: Replaced pyLinAcc with pyatspi.
	* help/en_GB/en_GB.po: Replaced pyLinAcc with pyatspi.
	* help/sv/sv.po: Replaced pyLinAcc with pyatspi.
	* plugins/script_recorder.py: Replaced pyLinAcc with pyatspi.
	* src/lib/accerciser/Makefile.am: Replaced pyLinAcc.zip with pyatspi.zip.
	* src/lib/accerciser/__init__.py: Fall back on zipped pyatspi if
	not in distro.
	* src/lib/accerciser/accerciser.py: Removed pyLinAcc from epydoc.
	* src/lib/accerciser/accessible_treeview.py: Removed pyLinAcc from 
	epydoc.
	* src/lib/accerciser/node.py: Removed pyLinAcc from epydoc.
	* src/lib/accerciser/plugin.py: Removed pyLinAcc from epydoc.
	* src/lib/accerciser/pyLinAcc.zip: Removed.
	* src/lib/accerciser/pyatspi.zip: Added.
	* src/lib/accerciser/script_playback.py: Removed pyLinAcc from epydoc. 
	* src/lib/accerciser/tools.py: Removed pyLinAcc from epydoc.

2007-05-06  Eitan Isaacson  <eitan@ascender.com>
