@@ -1,5 +1,9 @@
 2007-05-08  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/accerciser.in: Always enable gail.
+	* src/lib/accerciser/accerciser.py: Changed no desktop a11y dialog
+	behavior (bug 429505).
+
 	* src/lib/accerciser/plugin_manager.py: Added context menus to 
 	plugin tabs (bug 427059).
 	
